custom http upload now uses new HttpUrlConnection